<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.addstore.EditStoreFragment">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="@dimen/common_padding_default"
        android:gravity="center_horizontal"
        android:orientation="vertical">
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/name_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:startIconDrawable="@drawable/ic_store"
            app:counterMaxLength="@integer/counter_max_length_name"
            app:counterEnabled="true"
            app:helperText="@string/required_field"
            android:hint="@string/name_store"
            style="@style/TextLayoutStyle">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/name_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:maxLength="@integer/counter_max_length_name"
                android:inputType="textNoSuggestions">
                <requestFocus/>
            </com.google.android.material.textfield.TextInputEditText>
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/phone_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/common_padding_default"
            app:startIconDrawable="@drawable/ic_phone"
            app:counterMaxLength="@integer/counter_max_length_phone"
            app:counterEnabled="true"
            app:helperText="@string/required_field"
            android:hint="@string/phone_field"
            style="@style/TextLayoutStyle">
            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/phone_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="phone"
                android:maxLength="@integer/counter_max_length_phone"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/web_page_layout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/common_padding_default"
            app:startIconDrawable="@drawable/ic_link"
            app:helperText="@string/optional_field"
            android:hint="@string/web_store"
            style="@style/TextLayoutStyle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/web_page_store"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ellipsize="end"
                android:inputType="textMultiLine"
                android:maxLines="@integer/counter_max_lines"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Subtitle1"
                android:textColor="@color/color_for_url_text"
                tools:ignore="TextContrastCheck" />
        </com.google.android.material.textfield.TextInputLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/common_padding_default"
            android:orientation="horizontal"
            android:padding="@dimen/common_padding_default"
            android:gravity="center_vertical">
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/image_page_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="@integer/counter_max_lines"
                app:startIconDrawable="@drawable/ic_link"
                app:helperText="@string/required_field"
                android:hint="@string/image_store"
                style="@style/TextLayoutStyle">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/image_page_store"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/common_padding_image"
                    android:inputType="textMultiLine"
                    android:maxLines="@integer/counter_max_lines"
                    android:textAppearance="@style/TextAppearance.MaterialComponents.Caption"
                    android:textColor="@color/color_for_url_text"
                    tools:ignore="TextContrastCheck" />
            </com.google.android.material.textfield.TextInputLayout>
            <ImageView
                android:id="@+id/image_charged"
                android:layout_width="@dimen/common_padding_image"
                android:layout_height="@dimen/common_padding_image"
                android:layout_marginStart="@dimen/common_padding_default"
                android:contentDescription="@string/my_description"
                android:src="@drawable/ic_image"/>
        </LinearLayout>
    </LinearLayout>
</androidx.core.widget.NestedScrollView>